# amm-sdk

./: .gitignore  Cargo.toml  Makefile  README.md
amm/: Cargo.toml
amm/src/: composition.rs  lib.rs
amm/src/context/: clef.rs  dynamic.rs  key.rs  mod.rs  tempo.rs  tempo_suggestion.rs  time_signature.rs
amm/src/modification/: chord.rs  direction.rs  note.rs  phrase.rs  section.rs
amm/src/note/: accidental.rs  duration.rs  mod.rs  note.rs  pitch.rs
amm/src/storage/: amm.rs  json.rs  midi.rs  mod.rs  musicxml.rs
amm/src/structure/: chord.rs  mod.rs  multivoice.rs  note.rs  part.rs  phrase.rs  section.rs  staff.rs  timeslice.rs
amm/src/temporal/: mod.rs  timeslice.rs
amm/src/util/: mod.rs
amm/tests/test_midi_files/: test-4.mid  test-5.mid  test-6.mid
amm_internal/: Cargo.toml
amm_internal/src/: lib.rs
amm_macros/: Cargo.toml
amm_macros/src/: lib.rs
amm_sdk/: Cargo.toml
amm_sdk/assets/: docs.css
amm_sdk/examples/: Billie Jean.mscz  Billie Jean.mxl  Hymn_to_Freedom.mxl  full_output.json
amm_sdk/src/: composition.rs  wasm.rs
amm_sdk/src/context/: clef.rs  dynamic.rs  id.rs  key.rs  mod.rs  tempo.rs  tempo_suggestion.rs  time_signature.rs
amm_sdk/src/modification/: chord.rs  direction.rs  mod.rs  note.rs  phrase.rs  section.rs
amm_sdk/src/note/: accidental.rs  duration.rs  mod.rs  note.rs  pitch.rs
amm_sdk/src/storage/: amm.rs  midi.rs  mod.rs  musicxml.rs
amm_sdk/src/structure/: chord.rs  mod.rs  multivoice.rs  part.rs  phrase.rs  section.rs  staff.rs
amm_sdk/src/temporal/: timeslice.rs
amm_sdk/tests/test_midi_files/: test-3.mid
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
src/: composition.rs  lib.rs  wasm.rs
src/context/: clef.rs  dynamic.rs  id.rs  key.rs  mod.rs  tempo.rs  tempo_marking.rs  tempo_suggestion.rs  time_signature.rs
src/modification/: chord.rs  direction.rs  mod.rs  note.rs  phrase.rs  section.rs  slice.rs
src/note/: accidental.rs  display.rs  duration.rs  mod.rs  note.rs  pitch.rs
src/storage/: amm.rs  json.rs  midi.rs  mod.rs  musicxml.rs  xml.rs
src/structure/: chord.rs  mod.rs  multivoice.rs  note.rs  part.rs  phrase.rs  section.rs  staff.rs  system.rs  timeslice.rs
src/structure/slice/: mod.rs  musical.rs  notational.rs
tests/: Grande Valse Brillante2.musicxml  NewYorkStateOfMind.mxl  wasm.rs  wasm_index.html
