[package]
edition = "2021"
name = "amm_sdk"
version = "0.1.0"
authors = ["Will Hedgecock <will.hedgecock@gmail.com>"]
license = "MIT"
description = "Abstract Music Manipulation SDK"
documentation = "https://docs.rs/amm_sdk/latest/"
readme = "README.md"
homepage = "https://github.com/hedgetechllc/amm-sdk"
repository = "https://github.com/hedgetechllc/amm-sdk"
keywords = ["music", "musicxml", "format", "parser", "parsing"]
categories = ["api-bindings", "parsing", "data-structures", "encoding", "multimedia::audio"]
publish = false

[dependencies]
musicxml = { version = "1.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", default-features = false, features = ["console"] }

[features]
default = ["std"]
std = []

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"
