[workspace]
members = ["amm_internal", "amm_macros", "amm_sdk"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.4"
authors = ["Will Hedgecock <will.hedgecock@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/amm_sdk/latest/"
readme = "README.md"
homepage = "https://github.com/hedgetechllc/amm-sdk"
repository = "https://github.com/hedgetechllc/amm-sdk"
keywords = ["music", "musicxml", "format", "parser", "parsing"]
categories = ["api-bindings", "parsing", "data-structures", "encoding", "multimedia::audio"]
publish = true

[workspace.dependencies]
amm_internal = { path = "amm_internal", version = "0.3.0" }
amm_macros = { path = "amm_macros", version = "0.3.0" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"
