[package]
edition.workspace = true
name = "amm"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Abstract Music Manipulation (AMM) Rust SDK"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "assets/docs.css"]

[dependencies]
midly = { version = "0.5", default-features = false, features = ["alloc"] }
musicxml = { version = "1.0", default-features = false }
amm_internal.workspace = true
amm_macros.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde-wasm-bindgen = { version = "0.6" }
wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", default-features = false, features = ["console"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3" }

[features]
default = ["std", "print", "json"]
json = []
print = []
std = []

[lib]
crate-type = ["rlib", "cdylib"]
