[package]
edition.workspace = true
name = "amm_internal"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Abstract Music Manipulation (AMM) Rust SDK shared internal data types and traits"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
